syntax = "proto3";

package stock;

service StockService {
  rpc GetStockUpdates(stream Empty) returns (stream StockList);
}

message Empty {}

message StockResponse {
  string symbol = 1;
  float price = 2;
}

message StockList {
  repeated StockResponse stock = 1;
}